--- a/prj.conf
+++ b/prj.conf
@@ -19,7 +19,6 @@ CONFIG_WIFI_CREDENTIALS_STATIC_SSID="Myssid"
 CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="Mypassword"
 
 # Networking
-CONFIG_NET_CONFIG_AUTO_INIT=n
 CONFIG_NET_CONNECTION_MANAGER=y
 CONFIG_NETWORKING=y
 CONFIG_NET_SOCKETS=y
@@ -29,8 +28,29 @@ CONFIG_NET_UDP=y
 CONFIG_NET_TCP=y
 CONFIG_NET_DHCPV4=y
 
-CONFIG_NET_PKT_RX_COUNT=8
-CONFIG_NET_PKT_TX_COUNT=8
+CONFIG_NET_PKT_RX_COUNT=16
+CONFIG_NET_PKT_TX_COUNT=16
+
+# Logging
+CONFIG_NET_LOG=y
+CONFIG_LOG=y
+CONFIG_NET_STATISTICS=y
+CONFIG_PRINTK=y
+
+# Below section is the primary contributor to SRAM and is currently
+# tuned for performance, but this will be revisited in the future.
+CONFIG_NET_BUF_RX_COUNT=64
+CONFIG_NET_BUF_TX_COUNT=64
+CONFIG_NRF70_RX_NUM_BUFS=16
+CONFIG_HEAP_MEM_POOL_SIZE=120000
+CONFIG_HEAP_MEM_POOL_IGNORE_MIN=y
+CONFIG_NET_TC_TX_COUNT=1
+
+CONFIG_NET_IF_UNICAST_IPV4_ADDR_COUNT=1
+CONFIG_NET_MAX_CONTEXTS=5
+CONFIG_NET_CONTEXT_SYNC_RECV=y
+
+CONFIG_INIT_STACKS=y
 
 # Logging
 CONFIG_NET_LOG=y
@@ -60,7 +80,6 @@ CONFIG_NET_MGMT=y
 CONFIG_NET_MGMT_EVENT=y
 CONFIG_NET_MGMT_EVENT_INFO=y
 CONFIG_NET_MGMT_EVENT_QUEUE_SIZE=10
-CONFIG_NET_MGMT_EVENT_STACK_SIZE=4096
 
 CONFIG_NET_CONFIG_SETTINGS=y
 CONFIG_NET_CONFIG_INIT_TIMEOUT=0
@@ -80,13 +99,11 @@ CONFIG_DEBUG_COREDUMP_BACKEND_LOGGING=y
 CONFIG_DEBUG_COREDUMP_MEMORY_DUMP_MIN=y
 CONFIG_SHELL_CMDS_RESIZE=n
 
-
 # Kernel options
 CONFIG_ENTROPY_GENERATOR=y
 
 # Logging
 CONFIG_LOG=y
-CONFIG_LOG_BUFFER_SIZE=2048
 CONFIG_POSIX_CLOCK=y
 
 # Network shell
